# hiring-journey-website

./: .env.example  .env.staging.example  .gitignore  .gitmodules  APP_SUBDOMAIN_CURSOR_RULES.md  APP_SUBDOMAIN_SETUP.md  ARCHITECTURE_DECISION.md  BACKEND_API_PLAN.md  DEPLOYMENT.md  MIDDLEWARE_SETUP.md  NEXT_STEPS.md  PRICING_TO_SIGNUP_FLOW.md  QUICK_DEPLOY.md  README.md  TEAM_DATA_TEMPLATE.md  TEAM_DATA_UPDATE.md  eslint.config.mjs  instrumentation-client.ts  instrumentation.ts  middleware.ts  netlify.toml  next.config.js  package-lock.json  package.json  playwright.config.ts  proxy.ts  tailwind.config.ts
backend/: .dockerignore  .env.example  .env.production.compose.example  .env.production.example  .env.staging.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  docker-compose.prod-ha.yml  docker-compose.prod.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260413_0001_initial_schema.py  20260413_0002_user_settings.py  20260413_0003_user_credits.py  20260413_0004_admin_audit_logs.py  20260413_0005_job_status.py  20260413_0006_integer_job_application_ids.py  20260413_0007_job_metadata.py  20260413_0008_candidate_resumes.py  20260413_0009_candidate_feature_tables.py
backend/app/: __init__.py  bootstrap.py  db.py  job_serialization.py  json_list.py  main.py  models.py
backend/app/core/: admin_rate_limit.py  config.py  security.py  (+1 more)
backend/scripts/: backup-db.sh
backend/tests/: conftest.py  test_admin_rate_limit_middleware.py  test_api.py  test_candidate_features.py  test_credits.py  test_resume.py  test_security.py
(+317 files in other folders)
